# Translation-Runtime-Architecture

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TRA-BENCHMARK-SUITE.md  TRA-CONFORMANCE-GUIDE.md  TRA-ISA-REFERENCE.md  TRA-MODULE-AUTHORING.md  TRA-MODULE-ZH-EN.md  TRA-SPECIFICATION.md  audit_trace.jsonl  implementation_plan.md  prototype.md  review-feedback.md  review.md  start-here.md  status.md  to_translate.md
cache/: cache.db
compilation_artifacts/: glossary.yaml  structural_map.json  style_profile.yaml
docs/: TRA_Prototype_Audit_Report_r3.docx  TRA_audit_findings_register_r3.xlsx  api-reference.md  conformance-self-audit.md  prompt-to-review-2.md  prompt-to-review.md  prompts.md  session_log_1.md  session_log_2.md  session_log_3.md  session_log_4.md  spec-cross-reference.md  track_b3_findings.md  track_r3_baseline.md  worklog.md
docs/adr/: README.md
docs/audit/: TRA_audit_findings_register.xlsx
docs/audit/round2/: README.md  TRA_Prototype_Audit_Report_r2.docx  TRA_audit_findings_register_r2.xlsx  audit_worklog_r2.md  master_findings_register.json  track_a_findings.md  track_b_findings.md  track_c_findings.md  track_d_findings.md  track_e_findings.md  track_r_baseline.md
docs/audit/round3/: master_findings_register_r3.json  remediation_plan.md  track_a3_findings.md  track_c3_findings.md  track_d3_findings.md  track_e3_findings.md  track_f3_findings.md
docs/audit/round4/: README.md  TRA_Prototype_Audit_Report_r4.docx  TRA_audit_findings_register_r4.xlsx  master_findings_register_r4.json  remediation_plan_r4.md  summary.json  summary.txt  track_a4_findings.md  track_b4_findings.md  track_c4_findings.md  track_d4_findings.md  track_e4_findings.md  track_f4_findings.md  track_r4_baseline.md
docs/audit/round5/: README.md  summary.json  (+12 more)
tra-audit-skills/: README.md
tra-audit-skills/deliverables/: TRA_Prototype_Audit_Report.docx
tra-audit-skills/scripts/: tra_chart.py  tra_findings.py  tra_xlsx.py
tra-prototype/: .gitignore  README.md  SKILL.md  config.yaml  e2e_test.py  pyproject.toml  requirements.txt  to_translate.en.md  to_translate_en.md  tra_cli.py
tra-prototype/examples/: security_advisory_zh.md
tra-prototype/examples/expected_outputs/: security_advisory_zh.L3.target.md
tra-prototype/tests/: conftest.py  run_e2e_translation.py  test_anchor.py  test_benchmark.py  test_e2e_to_translate.py  test_isa.py  test_kernel.py  test_modules.py  test_outstanding_findings.py  test_phase0.py  test_phase6_hardening.py  test_recovery.py  test_reporting.py  test_tra043_protocol.py  test_tra047_config_robustness.py  test_tra071_broken_markdown.py  test_utils.py  test_validate.py
tra-prototype/tests/benchmark/cases/: regression.jsonl  sft.jsonl
tra-prototype/tra/: __init__.py  anchor.py  benchmark.py  cache.py  config.py  diagnostics.py  exceptions.py  hitl.py  isa.py  kernel.py  memory.py  policy.py  recovery.py  reporting.py  utils.py  validate.py
tra-prototype/tra/modules/: __init__.py  base.py  registry.py  zh_en.py
(+60 files in other folders)
