[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tra-prototype"
version = "0.0.1"
description = "TRA (Translation Runtime Architecture) v1.0 conformant translation engine — prototype"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8",
    "markdown-it-py>=3.0",
    "diskcache>=5.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
    # TRA-D5-011 (round 5): mutation testing framework for continuous
    # mutation score measurement. Run with: mutmut run
    "mutmut>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tra"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["tra", "tra_cli.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # click decorators

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["diskcache", "yaml", "markdown_it", "markdown_it.token", "rich.console", "rich.prompt"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# TRA-D5-011 (round 5): mutation testing configuration.
# Run with: mutmut run
# Expected mutation score: >=80% (target: 90%+).
# Mutations are applied to tra/ package only; tests/ are not mutated.
# R6 D6-002 fix: mutmut 3.x requires list values, not strings.
[tool.mutmut]
paths_to_mutate = ["tra"]
tests_dir = ["tests"]
max_stack_depth = 5
